--- a/ig.ini
+++ b/ig.ini
@@ -1,3 +1,3 @@
 [IG]
-ig = fsh-generated/resources/ImplementationGuide-ch.fhir.ig.ch-ig.json
+ig = fsh-generated/resources/ImplementationGuide-ch.fhir.ig.ch-umzh-connect.json
 template = ch.fhir.ig.template#current
